Beginning work on modal for adding entry

--- a/styles.css
+++ b/styles.css
@@ -26,3 +26,20 @@ h1 {
 .btn-container {
   justify-content: center;
 }
+
+.modal-background::before {
+  background-color: rgba(0, 0, 0, 0.75);
+  position: absolute;
+  content: "";
+  width: 100%;
+  top: 0;
+  bottom: 0;
+}
+
+.modal-box {
+  background-color: white;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
