--- a/styles.css
+++ b/styles.css
@@ -27,7 +27,7 @@ h1 {
   justify-content: center;
 }
 
-.modal-background::before {
+.modal-background {
   background-color: rgba(0, 0, 0, 0.75);
   position: absolute;
   content: "";
