--- a/styles.css
+++ b/styles.css
@@ -5,9 +5,11 @@
 body {
   margin: auto;
   padding: 0;
+  font-family: "Space Mono", monospace;
 }
 
-h1 {
+h1,
+h2 {
   text-align: center;
 }
 
@@ -42,4 +44,18 @@ h1 {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  width: 50%;
+  padding: 0 30px 30px;
+  border-radius: 0.25rem;
+}
+
+.description {
+  width: 100%;
+  height: 10vh;
+  margin-top: 0.5rem;
+}
+
+.submit {
+  float: right;
+  margin-top: 0.5rem;
 }
