--- a/layout.css
+++ b/layout.css
@@ -1,3 +1,35 @@
+* {
+  box-sizing: border-box;
+}
+
+.container {
+  max-width: 100%;
+}
+
+.row {
+  display: flex;
+  flex-wrap: wrap;
+}
+
+.column-full,
+.column-7 {
+  width: 100%;
+}
+
+.btn-container {
+  justify-content: center;
+}
+
 .hidden {
   display: none;
+}
+
+.margin {
+  width: 1100px;
+}
+
+@media only screen and (width > 768px) {
+  .column-7 {
+    flex-basis: calc(100% / 8);
+  }
 }
