--- a/styles.css
+++ b/styles.css
@@ -10,6 +10,27 @@ h2 {
   text-align: center;
 }
 
+table {
+  border: solid;
+  width: 80%;
+  margin: 0 auto;
+}
+
+thead {
+  color: white;
+  background-color: black;
+}
+
+tbody tr:nth-child(odd) {
+  background-color: rgb(172, 44, 66);
+  color: white;
+}
+
+tbody tr:nth-child(even) {
+  background-color: rgb(235, 208, 212);
+  color: rgb(182, 67, 67);
+}
+
 .week {
   border: 2px solid black;
   padding: 1rem;
