--- a/styles.css
+++ b/styles.css
@@ -31,6 +31,10 @@ tbody tr:nth-child(even) {
   color: rgb(182, 67, 67);
 }
 
+button {
+  background-color: yellow;
+}
+
 .week {
   border: 2px solid black;
   padding: 1rem;
@@ -56,7 +60,7 @@ tbody tr:nth-child(even) {
 }
 
 .modal-box {
-  background-image: url("https://www.verywellhealth.com/thmb/OR1PMG_pIYnSf8A90Dww_v_VIIM=/1500x1000/filters:no_upscale():max_bytes(150000):strip_icc()/safety-and-side-effects-of-pepto-bismol-for-ibs-4128810_V3-a30625fab64a44c88cec00db7a06542c.png");
+  background-color: hotpink;
   position: fixed;
   top: 50%;
   left: 50%;
